--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,69 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Render all elements normally -->
-        <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-        <!-- Bootstrap Framework -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-        <!-- Font Awesome Library -->
-        <link rel="stylesheet" href="{% static 'css/all.min.css' %}" />
-        <!-- Style sheet -->
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        <!-- google font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <!-- The title of the Website -->
-        <title> {% block title %} Newspapper {% endblock title %} </title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Render all elements normally -->
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <!-- Bootstrap Framework -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <!-- Font Awesome Library -->
+    <link rel="stylesheet" href="{% static 'css/all.min.css' %}" />
+    <!-- Style sheet -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- The title of the Website -->
+    <title> {% block title %} Studio Vision {% endblock title %} </title>
+</head>
+
 <body>
-    <div>
-        {% block content %}
-        {% endblock content %}
+    <div class="container">
+        <header class="p-3 mb-3 border-bottom">
+            <div class="d-flex flex-wrap align-items-center justify-content-center
+                justify-content-lg-start">
+                <a class="navbar-brand" href="{% url 'home' %}">Orders App</a>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
+                    mb-md-0">
+                    {% if user.is_authenticated %}
+                </ul>
+                <div class="dropdown text-end">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ user.username }}
+                    </a>
+                    <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                        <li><a class="dropdown-item" href="{% url 'password_change' %}">
+                                Change password</a></li>
+                        <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="dropdown-item">Log Out</button>
+                        </form> 
+                    </ul>
+                </div>
+                {% else %}
+                </ul>
+                <div class="text-end">
+                    <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
+                        Log In</a>
+                    <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
+                </div>
+                {% endif %}
+            </div>
+        </header>
+        <main>
+            {% block content %}
+            {% endblock content %}
+        </main>
     </div>
+
+
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
 </body>
+
+
 </html>
