--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
+{% block title %}Home{% endblock title %}
+
 {% block content %}
-  
+{% if user.is_authenticated %}
+  Hi {{ user.username }}! You are {{ user.age }} years old.
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">Log In</a> |
+  <a href="{% url 'signup' %}">Sign Up</a>
+{% endif %}
 {% endblock content %}
