--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,74 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Render all elements normally -->
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    <!-- Bootstrap Framework -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}" />
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- The title of the Website -->
-    <title> {% block title %}  {% endblock title %} </title>
-    <!-- Style sheet -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    
-</head>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Render all elements normally -->
+      <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+      <!-- Bootstrap Framework -->
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+      <!-- Font Awesome Library -->
+      <link rel="stylesheet" href="{% static 'css/all.min.css' %}" />
+      <!-- google font -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+      <!-- The title of the Website -->
+      <title> {% block title %}  {% endblock title %} </title>
+      <!-- Style sheet -->
+      <link rel="stylesheet" href="{% static 'css/base.css' %}">
+      
+  </head>
 
-<body>
-    {% block content %}
-    {% endblock content %}
+  <body>
+    <div class="containter-fluid">
+      <div class="row">
 
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/all.min.js' %}"></script>
-    
-</body>
+        <!-- Sidebar -->
+        <div class="col-md-2 sidebar" id="sidebar">
+          <!-- Toggle Button -->
+          <button class="btn btn-light mb-3" onclick="toggleSidebar()">
+            <i class="fas fa-bars"></i>
+          </button>
+          <!-- Sidebar Items -->
+          <div class="list-group text-nowrap">
+            <a href="#" class="list-group-item list-group-item-action sidebar-item">
+              <i class="fas fa-home"></i>
+              <span>Home</span>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action sidebar-item">
+              <i class="fas fa-user"></i>
+              <span>Profile</span>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action sidebar-item">
+              <i class="fas fa-envelope"></i>
+              <span>Messages</span>
+            </a>
+          </div>
+          <br>
+          <div class="changed-list">
+            {% block sidecontent %}
+            {% endblock sidecontent %}
+          </div>
+        </div>
 
+        <!-- Main Content -->
+        <div class="col-10">
+          {% block content %}
+          {% endblock content %}
+        </div>
+      </div>
+    </div>
 
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'js/all.min.js' %}"></script>
+      <!-- Custom Script -->
+      <script>
+        function toggleSidebar() {
+          var sidebar = document.getElementById('sidebar');
+          sidebar.classList.toggle('sidebar-minimized');
+        }
+      </script>
+  </body>
 </html>
