--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
 
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
       <script src="{% static 'js/all.min.js' %}"></script>
+      <script src="{% static 'js/htmx.min.js' %}"></script>
       <!-- Custom Script -->
       <script>
         function toggleSidebar() {
