--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,13 @@
 
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
       <script src="{% static 'js/all.min.js' %}"></script>
+      <!-- <script src="https://unpkg.com/htmx.org@1.1.0"></script> -->
       <script src="{% static 'js/htmx.min.js' %}"></script>
+      <script>
+          document.body.addEventListener('htmx:configRequest', (event) => {
+              event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+          });
+      </script>
       <!-- Custom Script -->
       <script>
         function toggleSidebar() {
