updating the orders app (fron-end & back-end)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,45 +11,69 @@ html {
     scroll-behavior: smooth;
 }
 body {
+    background-color: #181a1b;
     font-family: 'Work Sans', sans-serif;
     font-size: 18px;
 }
+
+.containter-fluid {
+}
+
+.collapsbutton {
+    color: white;
+    background-color: #181a1b;
+}
+
 .sidebar {
     height: 100vh;
-    background-color: #343a40;
+    background-color: #2c2f31;
     padding-top: 20px;
     padding-left: 15px;
     transition: all 0.3s;
   }
 
-  .sidebar-item {
-    padding: 10px;
-    transition: all 0.3s;
-  }
-  
-  .sidebar-item span {
-    margin-left: 10px;
-    transition: all 0.3s;
-  }
-  
-  .sidebar-minimized {
-    width: 80px !important;
-  }
+.list-group {
+    background-color: #181a1b;
+}
 
-  .sidebar-minimized .sidebar-item span {
-    display: none;
-    margin-left: 0;
-  }
+.list-group-item {
+    background-color: hsla(0, 0%, 0%, 0);
+    color: white;
+    opacity: .6;
+}
 
-  .list {
-    height: 100vh;
-  }
+.sidebar-item {
+  background-color: hsla(0, 0%, 0%, 0);
+  opacity: 0.7 ;
+  padding: 10px;
+  transition: all 0.2s;
+}
 
-  .card {
-    height: 80%;
-    width: 90%;
-  }
+.sidebar-item span {
+  margin-left: 10px;
+  transition: all 0.2s;
+}
 
-  .Table {
-    height: 100vh;
-  }
+
+
+.sidebar-minimized {
+  width: 80px !important;
+}
+
+.sidebar-minimized .sidebar-item span {
+  display: none;
+  margin-left: 0;
+}
+
+.list {
+  height: 100vh;
+}
+
+.card {
+  height: 80%;
+  width: 90%;
+}
+
+.Table {
+  height: 100vh;
+}
