--- a/templates/home.html
+++ b/templates/home.html
@@ -4,16 +4,16 @@
 
   {% block sidecontent %}
     <div class="list-group text-nowrap">
-      {% for catigory in catigory_list %}
+      {% for category in category_list %}
         <a href="#" class="list-group-item list-group-item-action sidebar-item">
           <i class="fa-solid fa-circle-plus"></i>
-          <span>{{ catigory.name }}</span>
+          <span>{{ category.name }}</span>
         </a>
       {% endfor %}
     </div>
   {% endblock sidecontent %}
 
   {% block content %}
-
+  sdfsdf
   {% endblock content %}
 
