--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="row">
           {% if user.is_authenticated %}
           <!-- Sidebar -->
-          <div class="col-2 sidebar d-flex flex-column m-0 p-3" id="sidebar">
+          <div class="col-2 sidebar d-flex flex-column m-0 p-3" id="sidebar" style="position: fixed; top: 0; left: 0; bottom: 0;">
             <!-- Toggle Button -->
             <button class=" btn btn-dark mb-3 align-self-start" style="background-color: #181a1b;" onclick="toggleSidebar()">
               <i class="fas fa-bars"></i>
@@ -38,24 +38,22 @@
                   <i class="fas fa-home"></i>
                   <span>Home</span>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action sidebar-item">
-                  <i class="fas fa-user"></i>
-                  <span>Profile</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action sidebar-item">
-                  <i class="fas fa-envelope"></i>
-                  <span>Messages</span>
-                </a>
               </div>
-              <div class="changed-list">
+              <div class="changed-list" style="overflow-y: auto; max-height: 55%">
                 {% block sidecontent %}
                 {% endblock sidecontent %}
               </div>
-              <div class="list-group text-nowrap align-items-end"> 
+              <div class="list-group text-nowrap align-items-end mb-4"> 
                 <a href="{% url "settings" %}" class="list-group-item list-group-item-action sidebar-item">
                   <i class="fa-solid fa-gear"></i>
                   <span>Settings</span>
                 </a>
+                {% if user.is_staff %}
+                  <a href="{% url "admin:index" %}" class="list-group-item list-group-item-action sidebar-item">
+                    <i class="fa-solid fa-gear"></i>
+                    <span>Admin</span>
+                  </a>
+                {% endif %}
                 <form method="post" action="{% url 'logout' %}" class="list-group-item list-group-item-action sidebar-item ">
                   {% csrf_token %}
                   <button type="submit" class="h-100 w-100 text-start border-0 bg-transparent text-white">
@@ -72,7 +70,7 @@
           </div>
           {% endif %}
           <!-- Main Content -->
-          <div class="col-10" style="height: 100vh;">
+          <div class="col-10 offset-2" style="height: 100vh;">
             {% block content %}
             {% endblock content %}
           </div>
