--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -23,7 +23,7 @@
           <td>{{ user.age }}</td>
           <td>{{ user.get_gender_display }}</td>
           <td>{{ user.job_title }}</td>
-          <td>0 EG</td>
+          <td>{{ user.salary }} EG</td>
           <td>
             {% if user.user.username in login_history %}
               <i class="fa-solid fa-circle" style="color: #63E6BE;"></i>
