complete the employee page and start with the employee_detail (tabs)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,6 +32,16 @@ body {
     transition: all 0.3s;
   }
 
+@media (max-width: 991.98px) { /* Medium screens */
+  .sidebar {
+    width: 80px; /* Set the width as desired for small screens */
+  }
+  .sidebar .sidebar-item span {
+    display: none;
+    margin-left: 0;
+  }
+}
+
 .list-group {
     background-color: #181a1b;
 }
